# example-strawberry-lazy

./: README.md  main.py  pyproject.toml
api/: post.py  schema.py  user.py
